--- a/PS_31_Yovana_Ilieva_Upr2_working/App.config
+++ b/PS_31_Yovana_Ilieva_Upr2_working/App.config
@@ -1,10 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 	</configSections>
-	<startup>
+	<connectionStrings>
+  <add name="PS_31_Yovana_Ilieva_Upr2_working.Settings.DbConnect"
+   connectionString="Data Source=DESKTOP-0P9FVGK;Initial Catalog=StudentInfoDatabase;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
+ <startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
 	</startup>
 	<entityFramework>
