--- a/StudentInfoSystem/App.config
+++ b/StudentInfoSystem/App.config
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 	</configSections>
 	<connectionStrings>
-  <add name="StudentInfoSystem.Properties.Settings.DbConnect" connectionString="Data Source=.\SQLExpress;Initial Catalog=StudentInfoDatabase;Integrated Security=True"
+  <add name="StudentInfoSystem.Properties.Settings.DbConnect" connectionString="Data Source=DESKTOP-0P9FVGK;Initial Catalog=StudentInfoDatabase;Integrated Security=True"
    providerName="System.Data.SqlClient" />
  </connectionStrings>
 	<startup>
